feat: 更新构建流程以支持多种 APK 构建类型，添加调试功能并改进界面；增强 Scheme 管理功能，添加详细信息展示