@@ -7,6 +7,9 @@ import android.content.pm.ActivityInfo;
 import android.content.pm.PackageManager;
 import android.content.pm.ResolveInfo;
 import android.net.Uri;
+import android.os.Build;
+import android.text.TextUtils;
+import android.util.Log;
 
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
@@ -21,19 +24,19 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
+import java.util.stream.IntStream;
 
 /** Loads scheme configuration and manages the generated activity aliases. */
 public final class SchemeManager {
     private static final String CONFIG_FILE = "schemes.json";
     private static final String ALIAS_PREFIX = "SchemeAlias_";
+    private static final String TAG = "SchemeManager";
 
     private final Context appContext;
     private final PackageManager packageManager;
@@ -41,6 +44,7 @@ public final class SchemeManager {
     public SchemeManager(@NonNull Context context) {
         appContext = context.getApplicationContext();
         packageManager = appContext.getPackageManager();
+        Log.d(TAG, "Initialized for package=" + appContext.getPackageName());
     }
 
     /** A configuration item, deduplicated by scheme with descriptions joined by " / ". */
@@ -62,7 +66,7 @@ public final class SchemeManager {
         ) {
             this.scheme = scheme;
             this.description = description;
-            this.installedAppNames = Collections.unmodifiableList(new ArrayList<>(installedAppNames));
+            this.installedAppNames = List.copyOf(installedAppNames);
             this.defaultHandlerName = defaultHandlerName;
             this.defaultHandlerPackage = defaultHandlerPackage;
             this.enabled = enabled;
@@ -109,27 +113,30 @@ public final class SchemeManager {
      */
     @NonNull
     public List<SchemeEntry> loadSchemes() throws IOException, JSONException {
+        Log.i(TAG, "Loading scheme configuration from assets/" + CONFIG_FILE);
         Map<String, LinkedHashSet<String>> grouped = new LinkedHashMap<>();
-        JSONArray source = new JSONArray(readAsset(CONFIG_FILE));
-        for (int index = 0; index < source.length(); index++) {
+        JSONArray source = new JSONArray(readAsset());
+        Log.d(TAG, "Parsed " + source.length() + " raw configuration entries");
+        IntStream.range(0, source.length()).forEach(index -> {
             JSONObject item = source.optJSONObject(index);
             if (item == null) {
-                continue;
+                Log.w(TAG, "Ignoring non-object configuration entry at index=" + index);
+                return;
             }
             String scheme = item.optString("scheme", "").trim();
             if (scheme.isEmpty()) {
-                continue;
+                Log.w(TAG, "Ignoring configuration entry with empty scheme at index=" + index);
+                return;
             }
             String description = resolveDescription(item.opt("desc"));
-            LinkedHashSet<String> descriptions = grouped.get(scheme);
-            if (descriptions == null) {
-                descriptions = new LinkedHashSet<>();
-                grouped.put(scheme, descriptions);
-            }
+            LinkedHashSet<String> descriptions = grouped.computeIfAbsent(
+                    scheme,
+                    ignored -> new LinkedHashSet<>()
+            );
             if (!description.isEmpty()) {
                 descriptions.add(description);
             }
-        }
+        });
 
         List<SchemeEntry> entries = new ArrayList<>();
         for (Map.Entry<String, LinkedHashSet<String>> item : grouped.entrySet()) {
@@ -137,68 +144,70 @@ public final class SchemeManager {
             List<String> installedAppNames = findInstalledAppNames(scheme);
             ResolveInfo directHandler = installedAppNames.isEmpty() ? null : findDirectHandler(scheme);
             String defaultHandlerName = getHandlerLabel(directHandler);
+            Log.v(
+                    TAG,
+                    "Scheme=" + scheme
+                            + ", installedHandlers=" + installedAppNames.size()
+                            + ", directHandler=" + (defaultHandlerName.isEmpty() ? "none" : defaultHandlerName)
+            );
             entries.add(new SchemeEntry(
                     scheme,
-                    join(item.getValue(), " / "),
+                    join(item.getValue()),
                     installedAppNames,
                     defaultHandlerName,
                     directHandler == null ? "" : directHandler.activityInfo.packageName,
                     isAliasEnabled(scheme)
             ));
         }
-        Collections.sort(entries, new Comparator<SchemeEntry>() {
-            @Override
-            public int compare(SchemeEntry first, SchemeEntry second) {
-                return first.scheme.compareToIgnoreCase(second.scheme);
-            }
-        });
+        entries.sort((first, second) -> first.scheme.compareToIgnoreCase(second.scheme));
+        Log.i(TAG, "Loaded " + entries.size() + " distinct schemes");
         return entries;
     }
 
     /**
      * Resolves a description from either a literal string or a localized object.
-     * Objects first use the full Android locale tag, then the language code, and
-     * finally their mandatory English fallback.
+     * Objects first use the full Android locale tag, then language-country
+     * combinations (for example zh-CN), the language code, and finally English.
      */
     @NonNull
     private static String resolveDescription(Object rawDescription) {
         if (rawDescription instanceof String) {
             return ((String) rawDescription).trim();
         }
-        if (!(rawDescription instanceof JSONObject)) {
+        if (!(rawDescription instanceof JSONObject translations)) {
             return "";
         }
-
-        JSONObject translations = (JSONObject) rawDescription;
         Locale locale = Locale.getDefault();
         String languageTag = locale.toLanguageTag();
-        String description = translations.optString(languageTag, "").trim();
-        if (!description.isEmpty()) {
-            return description;
+        String matchingDescription = translations.optString(languageTag, "").trim();
+        if (!matchingDescription.isEmpty()) {
+            return matchingDescription;
         }
 
-        // Android uses BCP 47 tags (for example zh-Hans-CN). Also accept
-        // resource-style locale keys such as zh-CN in configuration files.
-        String resourceStyleTag = languageTag.replace('-', '_');
-        description = translations.optString(resourceStyleTag, "").trim();
-        if (!description.isEmpty()) {
-            return description;
+        // Android may report a script-qualified tag (for example zh-Hans-CN),
+        // while the asset uses conventional language-country keys (zh-CN).
+        String language = locale.getLanguage();
+        String country = locale.getCountry();
+        if (!language.isEmpty() && !country.isEmpty()) {
+            String languageCountryDescription = translations.optString(
+                    language + "-" + country,
+                    ""
+            ).trim();
+            if (!languageCountryDescription.isEmpty()) {
+                return languageCountryDescription;
+            }
         }
-        description = translations.optString(locale.getLanguage(), "").trim();
-        if (!description.isEmpty()) {
-            return description;
+
+        String resourceStyleTag = languageTag.replace('-', '_');
+        String resourceStyleDescription = translations.optString(resourceStyleTag, "").trim();
+        if (!resourceStyleDescription.isEmpty()) {
+            return resourceStyleDescription;
+        }
+        String languageDescription = translations.optString(language, "").trim();
+        if (!languageDescription.isEmpty()) {
+            return languageDescription;
         }
         return translations.optString("en", "").trim();
-    }
-
-    /**
-     * Returns the application Android will launch directly for this Scheme.
-     * Returns an empty string when Android would show its resolver instead.
-     */
-    @NonNull
-    public String findDefaultHandlerName(@NonNull String scheme) {
-        ResolveInfo handler = findDirectHandler(scheme);
-        return getHandlerLabel(handler);
     }
 
     @NonNull
@@ -212,17 +221,17 @@ public final class SchemeManager {
     @NonNull
     private String getApplicationLabel(@NonNull ActivityInfo activityInfo) {
         CharSequence label = activityInfo.applicationInfo.loadLabel(packageManager);
-        return label == null || label.length() == 0
-                ? activityInfo.packageName
-                : label.toString();
+        return TextUtils.isEmpty(label) ? activityInfo.packageName : label.toString();
     }
 
     /** Returns whether at least one enabled activity can handle a Scheme. */
     public boolean hasHandler(@NonNull String scheme) {
-        return !packageManager.queryIntentActivities(
+        int handlerCount = packageManager.queryIntentActivities(
                 newSchemeIntent(scheme),
                 PackageManager.MATCH_DEFAULT_ONLY
-        ).isEmpty();
+        ).size();
+        Log.d(TAG, "Handler availability for scheme=" + scheme + ": count=" + handlerCount);
+        return handlerCount > 0;
     }
 
     /**
@@ -236,6 +245,7 @@ public final class SchemeManager {
                 PackageManager.MATCH_DEFAULT_ONLY
         );
         if (resolved == null || resolved.activityInfo == null) {
+            Log.d(TAG, "No resolved activity for scheme=" + scheme);
             return null;
         }
         for (ResolveInfo candidate : packageManager.queryIntentActivities(
@@ -245,9 +255,15 @@ public final class SchemeManager {
             if (candidate.activityInfo != null
                     && resolved.activityInfo.packageName.equals(candidate.activityInfo.packageName)
                     && resolved.activityInfo.name.equals(candidate.activityInfo.name)) {
+                Log.d(
+                        TAG,
+                        "Direct handler for scheme=" + scheme + ": "
+                                + resolved.activityInfo.packageName + "/" + resolved.activityInfo.name
+                );
                 return resolved;
             }
         }
+        Log.d(TAG, "Scheme=" + scheme + " resolves to the system resolver");
         return null;
     }
 
@@ -259,19 +275,29 @@ public final class SchemeManager {
                 Uri.parse("android-app://" + appContext.getPackageName())
         );
         intent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
-        appContext.startActivity(intent);
+        Log.i(TAG, "Launching debug intent for scheme=" + scheme);
+        try {
+            appContext.startActivity(intent);
+        } catch (android.content.ActivityNotFoundException exception) {
+            Log.w(TAG, "No activity found while launching debug scheme=" + scheme, exception);
+            throw exception;
+        }
     }
 
 
     /** Opens Android's default-opening settings, falling back to app details. */
     public void openAppDefaultsSettings(@NonNull String packageName) {
         Uri packageUri = Uri.fromParts("package", packageName, null);
-        Intent intent = new Intent(android.provider.Settings.ACTION_APP_OPEN_BY_DEFAULT_SETTINGS);
+        Intent intent = Build.VERSION.SDK_INT >= Build.VERSION_CODES.S
+                ? new Intent(android.provider.Settings.ACTION_APP_OPEN_BY_DEFAULT_SETTINGS)
+                : new Intent(android.provider.Settings.ACTION_APPLICATION_DETAILS_SETTINGS);
         intent.setData(packageUri);
         intent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
+        Log.i(TAG, "Opening default settings for package=" + packageName);
         try {
             appContext.startActivity(intent);
-        } catch (android.content.ActivityNotFoundException ignored) {
+        } catch (android.content.ActivityNotFoundException exception) {
+            Log.w(TAG, "Default-opening settings unavailable; opening app details for package=" + packageName);
             Intent fallback = new Intent(android.provider.Settings.ACTION_APPLICATION_DETAILS_SETTINGS);
             fallback.setData(packageUri);
             fallback.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
@@ -305,17 +331,21 @@ public final class SchemeManager {
             appNames.add(getApplicationLabel(activityInfo));
         }
         List<String> result = new ArrayList<>(appNames);
-        Collections.sort(result, String.CASE_INSENSITIVE_ORDER);
+        result.sort(String.CASE_INSENSITIVE_ORDER);
+        Log.d(TAG, "Found " + result.size() + " external handler apps for scheme=" + scheme);
         return result;
     }
 
     public boolean isAliasEnabled(@NonNull String scheme) {
         int state = packageManager.getComponentEnabledSetting(aliasComponent(scheme));
-        return state == PackageManager.COMPONENT_ENABLED_STATE_DEFAULT
+        boolean enabled = state == PackageManager.COMPONENT_ENABLED_STATE_DEFAULT
                 || state == PackageManager.COMPONENT_ENABLED_STATE_ENABLED;
+        Log.v(TAG, "Alias state: scheme=" + scheme + ", state=" + state + ", enabled=" + enabled);
+        return enabled;
     }
 
     public void setAliasEnabled(@NonNull String scheme, boolean enabled) {
+        Log.i(TAG, "Setting alias state: scheme=" + scheme + ", enabled=" + enabled);
         packageManager.setComponentEnabledSetting(
                 aliasComponent(scheme),
                 enabled
@@ -341,9 +371,9 @@ public final class SchemeManager {
     }
 
     @NonNull
-    private String readAsset(@NonNull String name) throws IOException {
+    private String readAsset() throws IOException {
         StringBuilder result = new StringBuilder();
-        try (InputStream stream = appContext.getAssets().open(name);
+        try (InputStream stream = appContext.getAssets().open(CONFIG_FILE);
              BufferedReader reader = new BufferedReader(
                      new InputStreamReader(stream, StandardCharsets.UTF_8))) {
             char[] buffer = new char[4096];
@@ -356,13 +386,14 @@ public final class SchemeManager {
     }
 
     @NonNull
-    private static String join(@NonNull Set<String> items, @NonNull String separator) {
+    private static String join(@NonNull Set<String> items) {
         StringBuilder result = new StringBuilder();
         for (String item : items) {
-            if (result.length() > 0) {
-                result.append(separator);
+            if (result.toString().isEmpty()) {
+                result.append(item);
+            } else {
+                result.append(" / ").append(item);
             }
-            result.append(item);
         }
         return result.toString();
     }
